Fix bleed issue on mobile header.

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -31,8 +31,8 @@ img {
 }
 
 .icon {
-  height: 50px;
-  width: 50px;
+  height: 35px;
+  width: 35px;
 }
 
 /* Header Styles */
@@ -41,17 +41,15 @@ header {
   position: fixed;
   height: 64px;
   width: 100%;
+  max-width: 100%;
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
   background-color: white;
+  box-sizing: border-box;
   padding: 0 24px;
   z-index: 5;
-}
-
-h1 {
-
 }
 
 .logo {
